inference/vllm/lws/mixtral-8x7b-instruct/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vllm-leader
  labels:
    leaderworkerset.sigs.k8s.io/name: vllm
    role: leader
spec:
  ports:
    - name: http
      port: 8000
      protocol: TCP
      targetPort: 8000
    - name: gcs-server
      port: 6379
      protocol: TCP
      targetPort: 6379
    - name: dashboard
      port: 8265
      protocol: TCP
      targetPort: 8265
  selector:
    leaderworkerset.sigs.k8s.io/name: vllm
    role: leader
  type: ClusterIP
