inference/vllm/lws/mixtral-8x7b-instruct/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/protocol: https
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: vllm-ingress
spec:
  ingressClassName: kommander-traefik
  rules:
  - host: vllm.wh-nkp1.cloudnative.nvdlab.net
    http:
      paths:
      - backend:
          service:
            name: vllm-leader
            port:
              number: 8000
        path: /
        pathType: Prefix
  tls:
    - secretName: llm-cert
      hosts:
        - vllm.wh-nkp1.cloudnative.nvdlab.net
